--- a/microservicecloud-eureka-7001/src/main/resources/application.yml
+++ b/microservicecloud-eureka-7001/src/main/resources/application.yml
@@ -1,12 +1,13 @@
 server:
   port: 7001
 
-
 eureka:
   instance:
-    hostname: localhost #服务端实例名称
+    hostname: eureka7001.com #集群服务端实例名称
+    #hostname: localhost #单机服务端实例名称
   client:
     register-with-eureka: false #false 表示不向注册中心注册自己
     fetch-registry: false #false表示自己端就是注册中心，我的职责就是维护服务实例，并不需要去检索服务
     service-url:
-        defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/  #设置与Eureka Server交互的地址查询服务和注册服务都需要依赖这个地址。
+      defaultZone: http://eureka7002.com:7002/eureka/,http://eureka7003.com:7003/eureka/
+        #单机 defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/  #设置与Eureka Server交互的地址查询服务和注册服务都需要依赖这个地址。
