--- a/microservicecloud-provider-dept-8001/src/main/resources/application.yml
+++ b/microservicecloud-provider-dept-8001/src/main/resources/application.yml
@@ -21,3 +21,18 @@ spring:
       initial-size: 5                                       # 初始化连接数
       max-total: 5                                          # 最大连接数
       max-wait-millis: 200                                  # 等待连接获取的最大超时时间
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://eureka7001.com:7001/eureka/,http://eureka7002.com:7002/eureka/,http://eureka7003.com:7003/eureka/
+      #单机 defaultZone: http://localhost:7001/eureka #客户端注册进eureka服务列表内
+  instance:
+    instance-id: microservicecloud-dept8001 #修改eureka服务status名字
+    prefer-ip-address: true #访问路径显示为IP地址
+
+info: #eureka服务info信息设置
+  app.name: hello-microservicecloud
+  company.name: www.gulin.vip
+  build.artifactId: $project.artifactId$
+  build.version: $project.version$
